--- a/src/pages/projects.astro
+++ b/src/pages/projects.astro
@@ -52,7 +52,7 @@ import '../styles/photos.scss'
         <h1>Vanni Aid</h1>
         <TinySplit>
           <div>
-            <p>We are currently working with Anita from Vanni Aid to re-do their website! Adarsh and one other peoson are working on this.</p>
+            <p>We are currently working with Anita from Vanni Aid to re-do their website! Adarsh is working on this.</p>
           </div>
           <div class="img-parent">
             <img src="/assets/projects/vanniaid-foundation.jpg" alt="The Vanni Aid Image" />
