--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -59,7 +59,7 @@ if (path.endsWith('/') && path !== '/') path = path.slice(0, path.length-1)
             }
 
             if (lPath === path) extraClasses += ' primary'
-            lPath = `/${lPath}`
+            lPath = `/${lPath}/`
 
             return <a href={lPath} class={`btn${extraClasses}`}>{link.name}</a>
           })
