--- a/src/components/header.astro
+++ b/src/components/header.astro
@@ -63,6 +63,7 @@ if (path.endsWith('/') && path !== '/') path = path.slice(0, path.length-1)
             lPath = `/${lPath}/`
 
             if (lPath.endsWith('//')) lPath = lPath.slice(0, -1)
+            if (lPath.startsWith('//')) lPath = lPath.slice(1)
 
             return <a href={lPath} class={`btn${extraClasses}`}>{link.name}</a>
           })
