--- a/src/styles/scrollAnimations.scss
+++ b/src/styles/scrollAnimations.scss
@@ -40,7 +40,7 @@
 }
   
 
-main:not(.profile) > * {
+main:not(.profile, .portal) > * {
     &:not(.hero, :has( > section)) {
         @include scaleAnimations(both);
         @include animations;
