--- a/src/pages/portal.astro
+++ b/src/pages/portal.astro
@@ -1,18 +1,21 @@
 ---
-import Layout from '../layouts/Layout.astro'
 import '../styles/pages/portal.scss'
-import '../styles/components/hero.scss'
 import '../styles/globals.scss'
+
+import Layout from '../layouts/Layout.astro'
+import Hero from '../components/hero.astro'
 ---
 <Layout title="Member Portal">
   <main id="content" class="portal">
-    <section class="login-parent">
-      <h2>login</h2>
-      <div class="login">
-        <input type="password" id="password" />
-        <button class="btn">Submit</button>
-      </div>
-    </section>
+    <Hero>
+      <section class="login-parent">
+        <h2>login</h2>
+        <div class="login">
+          <input type="password" id="password" />
+          <button class="btn">Submit</button>
+        </div>
+      </section>
+    </Hero>
   </main>
   <script is:inline src="/portalpw.js"></script>
 </Layout>
