--- a/src/pages/welcome.astro
+++ b/src/pages/welcome.astro
@@ -12,14 +12,14 @@ import '../styles/welcome.scss'
   </head>
   <body>
     <iframe></iframe>
-    <div id="welcome-bg"></div>
-    <main id="welcome">
+    <div class="welcome-bg"></div>
+    <main class="welcome">
       <div>
         <section top>
           <h1>Welcome to Graphics for Good</h1>
         </section>
         <section middle>
-          <h1 id="whymakethisclub">Why make this club?</h1>
+          <h1 class="whymakethisclub">Why make this club?</h1>
           <p class="text" centered style="text-align: justify;">
             Our mission is to help create change in the world through design. We understand the importance of design in the non-profit sector, and we want to use our skills and resources to support organizations that are making a positive impact in our community and beyond. We strive to provide free design help for non-profits that support a wide range of causes, from environmental protection to healthcare, education and more.
           </p>
