--- a/src/pages/index.astro
+++ b/src/pages/index.astro
@@ -10,7 +10,7 @@ import WorkCarousel from '../components/carousels/workCarousel.astro'
 import '../styles/pages/index.scss'
 import '../styles/photos.scss'
 ---
-<Layout title="">
+<Layout title="Home">
   <main id="content">
     <Hero>
       <div>
