--- a/src/pages/linktree.astro
+++ b/src/pages/linktree.astro
@@ -1,12 +1,8 @@
-<!DOCTYPE html>
-<html lang="en">
-  <head>
-<metaTags />
-    <meta property="title" content="LinkTree | Graphics for Good">
-    <meta property="og:title" content="LinkTree | Graphics for Good">
-    <title>LinkTree | Graphics for Good</title>
-  </head>
-  <body>
-    <iframe loading="lazy" style="position: absolute; width: 100%; height: 100%; top: 0; left: 0; border: none; padding: 0;margin: 0;" src="https://www.canva.com/design/DAFdPfTBAUM/view?embed" allowfullscreen="allowfullscreen" allow="fullscreen"></iframe>
-  </body>
-</html>
+---
+import Layout from '../layouts/layout.astro'
+
+import '../styles/pages/linktree.scss'
+---
+<Layout title="LinkTree">
+  <iframe loading="lazy" class="tree" src="https://www.canva.com/design/DAFdPfTBAUM/view?embed" allowfullscreen="allowfullscreen" allow="fullscreen"></iframe>
+</Layout>
