--- a/src/pages/linktree.astro
+++ b/src/pages/linktree.astro
@@ -1,5 +1,5 @@
 ---
-import Layout from '../layouts/layout.astro'
+import Layout from '../layouts/Layout.astro'
 
 import '../styles/pages/linktree.scss'
 ---
