--- a/src/components/footer.astro
+++ b/src/components/footer.astro
@@ -49,7 +49,7 @@ else {
 finalDate = `${finalDateS[0]}, ${finalDateS[1]} ${finalDateS[2]}, ${finalDateS[3]}`
 
 ---
-<footer>
+<footer class="footer">
     <span>
         <span class="fWord">Site</span> Updated on <span class="date">{finalDate}</span> by <a href={`/members/${uMember}`} class="member">{uMemberName}</a> | 
         Check Status at <a href="https://go.graphics-for-good.com/Status">/status</a>.
