--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -25,6 +25,8 @@ if (title === 'Home') dTitle = sTitle
 
 var currentPath = `/${Astro.url.pathname}`
 if (currentPath.includes('//')) currentPath = currentPath.split('//').join('/')
+var currentSite = Astro.site
+if (currentPath.endsWith('/')) currentSite = currentSite.substeing(0, -1*'/'.length)
 var currentPage = `${Astro.site}${currentPath}`
 ---
 <!DOCTYPE html>
