--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -26,7 +26,7 @@ if (title === 'Home') dTitle = sTitle
 var currentPath = `/${Astro.url.pathname}`
 if (currentPath.includes('//')) currentPath = currentPath.split('//').join('/')
 var currentSite = Astro.site
-if (currentPath.endsWith('/')) currentSite = currentSite.substeing(0, -1*'/'.length)
+if (currentPath.endsWith('/')) currentSite = currentSite.substring(0, -1*'/'.length)
 var currentPage = `${Astro.site}${currentPath}`
 ---
 <!DOCTYPE html>
