--- a/src/layouts/Layout.astro
+++ b/src/layouts/Layout.astro
@@ -25,7 +25,7 @@ if (title === 'Home') dTitle = sTitle
 
 var currentPath = `/${Astro.url.pathname}`
 if (currentPath.includes('//')) currentPath = currentPath.split('//').join('/')
-var currentSite = Astro.site
+var currentSite = Astro.site.toString()
 if (currentPath.endsWith('/')) currentSite = currentSite.substring(0, -1*'/'.length)
 var currentPage = `${Astro.site}${currentPath}`
 ---
