--- a/src/pages/members.astro
+++ b/src/pages/members.astro
@@ -1,5 +1,5 @@
 ---
-var members = await Astro.glob('../../members/*/*.js')
+var members = await Astro.glob('../../members/*/info.js')
 
 import Layout from '../layouts/Layout.astro'
 import Hero from '../components/hero.astro'
