--- a/src/pages/members/[username].astro
+++ b/src/pages/members/[username].astro
@@ -45,7 +45,7 @@ const { username } = Astro.params;
 import MemberPageTemplate from '../../components/memberPageTemplate.astro'
 
 var userDatas = await Astro.glob('../../../members/*/info.js')
-var userData = userData.find(data=> data.file.includes(`/members/${username}/info.js`))
+var userData = userDatas.find(data=> data.file.includes(`/members/${username}/info.js`))
 ---
 <Layout title={userData.name}>
   <main id="content" class="profile">
