--- a/src/pages/members/[username].astro
+++ b/src/pages/members/[username].astro
@@ -47,7 +47,7 @@ import MemberPageTemplate from '../../components/memberPageTemplate.astro'
 var defaultData = await Astro.glob('../../../members/_admin/info.js')
 var userDatas = await Astro.glob('../../../members/*/info.js')
 var userData = userDatas.find(data => data.username === username)
-if (!userData) defaultData[0]
+if (!userData) userData = defaultData[0]
 
 ---
 <Layout title={userData.name}>
