--- a/src/pages/members/[username].astro
+++ b/src/pages/members/[username].astro
@@ -41,14 +41,13 @@ export function getStaticPaths() {
 }
 
 const { username } = Astro.params;
+if (!username) username = '_admin'
 
 import MemberPageTemplate from '../../components/memberPageTemplate.astro'
 
 var defaultData = await Astro.glob('../../../members/_admin/info.js')
 var userDatas = await Astro.glob('../../../members/*/info.js')
 var userData = userDatas.find(data => data.username === username)
-if (!userData) defaultData.map(d => userData = d)
-
 ---
 <Layout title={userData.name}>
   <main id="content" class="profile">
