--- a/src/pages/members/[username].astro
+++ b/src/pages/members/[username].astro
@@ -4,6 +4,11 @@ import Layout from '../../layouts/Layout.astro'
 import '../../styles/pages/members.scss'
 import '../../styles/photos.scss'
 
+import updateUserData from '../../../members/updateUserData.js'
+import defaultBio from '../../../members/defaultBio.js'
+import updateLeftData from '../../../members/updateLeftData.js'
+import getUserGrade from '../../../members/getUserGrade.js'
+
 var usernames = []
 
 await fetch(`https://database.graphics-for-good.com/getUsernames`)
@@ -47,7 +52,9 @@ import MemberPageTemplate from '../../components/memberPageTemplate.astro'
 
 var defaultData = await Astro.glob('../../../members/_admin/info.js')
 var userDatas = await Astro.glob('../../../members/*/info.js')
+
 var userData = userDatas.find(data => data.username === username)
+userData = updateUserData(userData, defaultBio, updateLeftData, getUserGrade)
 ---
 <Layout title={userData.name}>
   <main id="content" class="profile">
