--- a/src/pages/members/[username].astro
+++ b/src/pages/members/[username].astro
@@ -58,58 +58,55 @@ userData = updateUserData(userData, defaultBio, updateLeftData, getUserGrade)
 ---
 <Layout title={userData.name}>
   <main id="content" class="profile">
-    <section>
-      {
-        ['hi'].map(_ => {
-          if (userData.status === 'active') return (
-            {userData.pfp ? <img class="pfp" id="pfp" src={userData.pfp.url} /> : ''}
-            // <h1 class="name" id="name">{userData.name}</h1>
-            // {
-            //   !!userData.email ? {<a class="email" id="email" href={`mailto:${userData.email.address}`}></a>} : ''
-            // }
-            // {
-            //   !!userData.location ? {
-            //     <a class="location" id="location" href={userData.location.mapLink}>        
-            //       <div></div>
-            //       <span>{userData.location.combined}</span>
-            //     </a>
-            //   } : ''
-            // }
-            // {
-            //   !!userData.socials ? 
-            //   {
-            //     <ul class="socials">
-            //       {
-            //         userData.socials.map((social) => (
-            //           <li>
-            //             <a href={social.url} target="_blank" style={`background-image: url('${social.icon}')`}></a>
-            //           </li>
-            //         ))
-            //       }
-            //     </ul>
-            //   } : ''
-            // }
-            // <p class="bio" id="bio" set:html={userData.bio.result}></p>
-            // <h2>Portfolio</h2>
-            // {
-            //   !!userData.portfolio ? 
-            //   {
-            //     <ul class="photos" style="height: auto; gap: 25px;">
-            //       {
-            //         userData.portfolio.map((photo) => {
-            //           <li>
-            //             <img src={photo.src} title={photo.title} onclick={photo.onclick} />
-            //           </li>
-            //         })
-            //       }
-            //     </ul>
-            //   } : ''
-            // }
-          )
-          else return <pre>{userData}</pre>
-        })
-      }
-    </section>
+    {
+      userData ? 
+        <section>
+          {
+            (userData.status === 'active' && userData.pfp) ? <img class="pfp" id="pfp" src={userData.pfp.url} /> : ''
+          }
+          <h1 class="name" id="name">{userData.name}</h1>
+          {
+            (userData.status === 'active' && userData.email) ? <a class="email" id="email" href={`mailto:${userData.email.address}`}></a> : ''
+          }
+          {
+            (userData.status === 'active' && userData.location) ? 
+              <a class="location" id="location" href={userData.location.mapLink}>        
+                <div></div>
+                <span>{userData.location.combined}</span>
+              </a>
+            : ''
+          }
+          {
+            (userData.status === 'active' && userData.socials) ? 
+              <ul class="socials">
+                {
+                  userData.socials.map((social) => (
+                    <li>
+                      <a href={social.url} target="_blank" style={`background-image: url('${social.icon}')`}></a>
+                    </li>
+                  ))
+                }
+              </ul>
+            : ''
+          }
+          <p class="bio" id="bio" set:html={userData.bio.result}></p>
+          {
+            (userData.status === 'active' && userData.portfolio) ? 
+                <h2>Portfolio</h2>
+                <ul class="photos" style="height: auto; gap: 25px;">
+                {
+                  userData.portfolio.map((photo) => {
+                    <li>
+                      <img src={photo.src} title={photo.title} onclick={photo.onclick} />
+                    </li>
+                  })
+                }
+              </ul>
+            : ''
+          }
+        </section>
+      : <section><pre>{userData}</pre></section>
+    }
   </main>
   <script is:inline src="/members.js"></script>
   <script is:inline src="/modal.js"></script>
