--- a/src/pages/members/[username].astro
+++ b/src/pages/members/[username].astro
@@ -55,6 +55,8 @@ var userDatas = await Astro.glob('../../../members/*/info.js')
 
 var userData = userDatas.find(data => data.username === username)
 userData = updateMember(userData, defaultBio, updateLeftMember, getUserGrade)
+
+console.log(username)
 ---
 <Layout title={userData.name}>
   <main id="content" class="profile">
