--- a/src/pages/members/[username].astro
+++ b/src/pages/members/[username].astro
@@ -54,9 +54,10 @@ var defaultData = await Astro.glob('../../../members/_admin/info.js')
 var userDatas = await Astro.glob('../../../members/*/info.js')
 
 var userData = userDatas.find(data => data.username === username)
+console.log(username)
+
 userData = updateMember(userData, defaultBio, updateLeftMember, getUserGrade)
 
-console.log(userData)
 ---
 <Layout title={userData.name}>
   <main id="content" class="profile">
