--- a/src/pages/members/[username].astro
+++ b/src/pages/members/[username].astro
@@ -54,7 +54,7 @@ var defaultData = await Astro.glob('../../../members/_admin/info.js')
 var userDatas = await Astro.glob('../../../members/*/info.js')
 
 var userData = userDatas.find(data => data.username === username)
-console.log(username)
+console.log(username, userData)
 
 userData = updateMember(userData, defaultBio, updateLeftMember, getUserGrade)
 
