--- a/src/pages/members/[username].astro
+++ b/src/pages/members/[username].astro
@@ -53,7 +53,7 @@ import MemberPageTemplate from '../../components/memberPageTemplate.astro'
 var defaultData = await Astro.glob('../../../members/_admin/info.js')
 var userDatas = await Astro.glob('../../../members/*/info.js')
 
-var userData = userDatas.find(data => data.username === username)
+var userData = userDatas.find(data => console.log(data.username))
 console.log(username, userData)
 
 userData = updateMember(userData, defaultBio, updateLeftMember, getUserGrade)
